--- a/ryanv2.html
+++ b/ryanv2.html
@@ -3,51 +3,44 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ryan Name Generator</title>
+  <title>Name Generator</title>
   <meta name="description" content="A very serious, extremely scientific name generator." />
   <style>
     :root{
       --bg: radial-gradient(1200px 800px at 20% 10%, #7dd3fc33 0%, transparent 60%),
             radial-gradient(1000px 700px at 80% 90%, #c4b5fd33 0%, transparent 55%),
             linear-gradient(180deg, #0b1020 0%, #0a0f1c 100%);
-      --card: #0f172aCC;
-      --muted: #94a3b8;
-      --text: #e2e8f0;
-      --accent: #60a5fa;
-      --accent-2: #a78bfa;
-      --radius: 22px;
+      --card:#0f172aCC;--muted:#94a3b8;--text:#e2e8f0;
+      --accent:#60a5fa;--accent-2:#a78bfa;--radius:22px;
     }
     *{box-sizing:border-box}
     html,body{height:100%}
     body{
-      margin:0;
-      color:var(--text);
-      background:var(--bg) fixed;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+      margin:0;color:var(--text);background:var(--bg) fixed;
+      font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial;
     }
     .wrap{min-height:100%;display:grid;place-items:center;padding:48px 16px;}
     .card{
-      width:min(840px, 92vw);
-      background:linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.02)) , var(--card);
-      backdrop-filter: blur(18px);
+      width:min(840px,92vw);
+      background:linear-gradient(180deg,rgba(255,255,255,.06),rgba(255,255,255,.02)),var(--card);
+      backdrop-filter:blur(18px);
       border:1px solid rgba(148,163,184,.15);
       border-radius:var(--radius);
-      box-shadow:0 20px 40px rgba(2, 6, 23, .6);
+      box-shadow:0 20px 40px rgba(2,6,23,.6);
       overflow:hidden;
     }
     .header{
       padding:28px 28px 10px;
       display:flex;align-items:center;gap:14px;
       border-bottom:1px solid rgba(148,163,184,.12);
-      background:linear-gradient(180deg, rgba(96,165,250,.08), transparent 65%);
+      background:linear-gradient(180deg,rgba(96,165,250,.08),transparent 65%);
     }
     .logo{
       width:42px;height:42px;border-radius:14px;
       display:grid;place-items:center;
-      background:linear-gradient(135deg, var(--accent), var(--accent-2));
+      background:linear-gradient(135deg,var(--accent),var(--accent-2));
       color:white;font-weight:900;font-size:18px;
       box-shadow:0 10px 20px rgba(96,165,250,.3);
-      user-select:none;
     }
     h1{margin:0;font-size:clamp(22px,2.2vw+12px,32px);}
     .subtitle{margin:4px 0 0;color:var(--muted);font-size:14px;}
@@ -64,9 +57,9 @@
     button{
       appearance:none;border:none;cursor:pointer;color:white;
       padding:12px 16px;border-radius:14px;font-weight:600;
-      background:linear-gradient(135deg, var(--accent), var(--accent-2));
+      background:linear-gradient(135deg,var(--accent),var(--accent-2));
       box-shadow:0 10px 20px rgba(99,102,241,.28);
-      transition: transform .08s ease,filter .2s ease;
+      transition:transform .08s ease,filter .2s ease;
     }
     button:hover{filter:brightness(1.08);}
     input{
@@ -75,11 +68,8 @@
       background:rgba(2,6,23,.4);color:var(--text);
       width:100%;max-width:300px;font-size:16px;
     }
-    .footer{
-      text-align:center;
-      padding:16px;color:var(--muted);font-size:12px;
-      border-top:1px solid rgba(148,163,184,.12);
-    }
+    .footer{text-align:center;padding:16px;color:var(--muted);font-size:12px;
+      border-top:1px solid rgba(148,163,184,.12);}
   </style>
 </head>
 <body>
@@ -89,7 +79,7 @@
         <div class="logo">N</div>
         <div>
           <h1 id="title">Name Generator</h1>
-          <p class="subtitle">Picking a new name for you.</p>
+          <p class="subtitle">Suggesting a perfect new name for you.</p>
         </div>
       </div>
       <div class="body" id="app">
@@ -101,14 +91,13 @@
         </div>
 
         <div id="generatorSection" style="display:none;">
-          <div class="output" id="output"><span id="name">—</span></div>
+          <div class="output" id="output"><span id="name">Ryan</span></div>
           <div class="controls">
-            <button id="generate">Generate</button>
             <button id="reset" class="secondary">Reset</button>
           </div>
         </div>
       </div>
-      <div class="footer">v1.1 • 100% Ryan</div>
+      <div class="footer">v1.2 • 100% Ryan</div>
     </section>
   </div>
 
@@ -117,9 +106,8 @@
     const usernameInput = document.getElementById('username');
     const generatorSection = document.getElementById('generatorSection');
     const nameInputSection = document.getElementById('nameInputSection');
-    const generateBtn = document.getElementById('generate');
-    const resetBtn = document.getElementById('reset');
     const output = document.getElementById('name');
+    const resetBtn = document.getElementById('reset');
 
     startBtn.addEventListener('click', () => {
       const name = usernameInput.value.trim();
@@ -129,9 +117,7 @@
       }
       nameInputSection.style.display = "none";
       generatorSection.style.display = "block";
-    });
-
-    generateBtn.addEventListener('click', () => {
+      // Immediately generate Ryan
       output.textContent = "Ryan";
     });
 
@@ -139,7 +125,7 @@
       generatorSection.style.display = "none";
       nameInputSection.style.display = "block";
       usernameInput.value = "";
-      output.textContent = "—";
+      output.textContent = "Ryan";
     });
   </script>
 </body>
